workspaces/liferay-marketplace-workspace/client-extensions/liferay-marketplace-custom-element/src/pages/ProvideAppBuildPage/ProvideAppBuildPage.scss
.provide-app-build-page {
	&-container {
		width: 37.5rem;
	}

	&-add-package-button {
		background-color: #FBFCFE;
		border-color: #E7EFFF;
		color: #0B5FFF;
		margin-top: 1.5rem;

		&:active, &:hover {
			background-color: #EDF3FE;
			border-color: #0053F0;
			color: #0B5FFF;
		}
	}

	&-app-build {
		&-container {
			margin-bottom: 1.5rem;
		}

		&-radio-container,
		&-checkbox-container {
			display: flex;
			flex-direction: column;
			gap: 1.5rem;
		}
	}

	&-cloud-compatible-container {
		align-items: center;
		display: flex;
		gap: 1.5rem;
		justify-content: flex-start;
	}

	&-dropzone-container {
		border-radius: 0.5rem;
		border: 1px solid #E2E2E4;

		&-header {
			background-color: #F7F7F8;
		}

		.dropzone-upload-container {
			height: unset;
			margin: 0.5rem;
			padding: 1.5rem;
			width: unset;
		}
	
		.file-list-container {
			margin-bottom: 0;
		}
	}
}

